<resources>
    <string name="app_name">TP1Quiz</string>
    <string name="app_welcome">TP1 Quiz</string>
    <string name="data_name">Nom</string>
    <string name="btn_play">Jouer</string>
    <string name="message_No_Name">Vous devez entrez votre nom!</string>
    <string name="name_placeholder">Nom</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_title">Regles</string>
    <string name="rules_text">Ceci sont des regles du quiz.</string>
    <string name="finished_message">Quiz fini!</string>
    <string name="score_display">Votre score:</string>
    <string name="btn_replay">Jouer encore!</string>
    <string name="background_image">Background Image</string>

</resources>
